<resources>
    <string name="cameras_txt">My</string>
    <string name="app_name">EZOpenSDK</string>
    <string name="exit">Confirm to login out.</string>
    <string name="exit_tip">Switch to another account? \nNote: The app will be closed forcibly, please manually open it again!</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="certain">Save</string>
    <string name="wait">Wait</string>
    <string name="next_button_txt">Next</string>
    <string name="complete_txt">Finish</string>
    <string name="operational_fail">Operation failed.</string>
    <string name="common_passwd_error">Incorrect password</string>
    <string name="login_password_tv_txt">Password</string>
    <string name="web_login_button_txt">EZVIZ OAuth Protocol Login </string>
    <string name="platform_login_button_txt">Private Cloud Docking Authorization</string>
    <string name="please_input_platform_accesstoken_txt">Enter the acToken that you got when calling EZVIZ Open Platform.</string>
    <string name="please_input_phonenumber_txt">Enter the mobile phone number.</string>
    <string name="update_exit">Exit</string>
    <string name="sms_verify_code_received">Enter the verification code sent to your registered mobile phone number.</string>
    <string name="please_input_sign_txt">Enter your json string.</string>
    <string name="please_input_userid_txt">Enter user ID.</string>
    <string name="localmgt_video_square_txt">Video Square</string>
    <string name="wifi_set">Configure Wi-Fi </string>
    <string name="added_camera_success_txt">Added.</string>
    <string name="open_camera_fail">Operation failed. You can add the device manually.</string>
    <string name="serial_number_error">Incorrect serial No.</string>
    <string name="realplay_play_fail">Playback failed.</string>
    <string name="realplay_password_error_title">Enter the device password</string>
    <string name="realplay_encrypt_password_error_title">Enter the encryption password.</string>
    <string name="realplay_password_error_message1">The default password is 12345. If it has been modified, enter the new password.</string>
    <string name="realplay_encrypt_password_error_message">Enter the password as the video is encrypted. The default password is the device verification code on the device label. If no verification code on your device, Input the default verification code: ABCDEF (upper-case).</string>
    <string name="realplay_password_error_message3">Enter the device password and upgrade the device to the latest version.</string>
    <string name="realplay_password_error_message4">The video is encrypted. Contact the administrator to get the password (the password is case-sensitive).</string>
    <string name="realplay_play_fail_becauseof_network">Video playback failed. Check your network.</string>
    <string name="realplay_play_talkback_network_exception">Network exception. The two-way audio is turned off.</string>
    <string name="realplay_play_talkback_request_timeout">Requesting timed out. The two-way audio is turned off.</string>
    <string name="realplay_play_talkback_fail">Turning the two-way audio on failed.</string>
    <string name="realplay_play_talkback_fail_ison">Two-way audio can be enabled for only one device at the same time. Please stop the two-way audio of other device first and try again.</string>
    <string name="realplay_play_talkback_fail_privacy">Operation failed. The privacy mask of the device is enabled.</string>
    <string name="realplay_set_vediomode_fail">Switching the video quality failed.</string>
    <string name="realplay_set_fail_network">Operation failed. Check your network.</string>
    <string name="realplay_set_fail_status">Operation failed. The device has privacy mask enabled.</string>
    <string name="realplay_fail_device_not_exist">Offline Device(s)</string>
    <string name="realplay_fail_connect_device">Operation failed, device connection exception.</string>
    <string name="realplay_loading">Loading…Please wait.</string>
    <string name="realplay_login_password_error">Logging device failed.</string>
    <string name="realplay_login_password_msg">The default password is the device verification code. If the device has registered to the platform, please enter user ID.</string>
    <string name="realplay_play_no_video_source">No Video Source</string>
    <string name="camera_not_online">Offline Device(s)</string>
    <string name="remoteplayback_fail">Playback failed.</string>
    <string name="remoteplayback_over_link">No more connection is allowed. Please disconnect from other terminals and try again.</string>
    <string name="remoteplayback_connect_server_error">Connecting to server failed. Please try again.</string>
    <string name="remoteplayback_connect_device_error">Playback interrupted, please try again.</string>
    <string name="remoteplayback_searchfile_fail_for_network">Searching video failed. Check your network.</string>
    <string name="remoteplayback_searchfile_fail_for_device">Searching the video failed.</string>
    <string name="remoteplayback_norecordfile">No record found.</string>
    <string name="remoteplayback_norecordfile_alarm">No video found.</string>
    <string name="remoteplayback_capture_fail">Operation failed.</string>
    <string name="remoteplayback_capture_fail_for_memory">Operation failed, insufficient memory space.</string>
    <string name="remoteplayback_record_fail">Operation failed.</string>
    <string name="remoteplayback_record_fail_for_memory">Recording interrupted, insufficient memory space.</string>
    <string name="remoteplayback_SDCard_disable_use">No memory card available.</string>
    <string name="scan_cue_txt">Scan the QR code on the device or the cover of the Quick Start Guide.</string>
    <string name="scan_title_txt">Scan Serial No.</string>
    <string name="get_camera_list_fail">Getting device list failed.</string>
    <string name="not_camera_device">is not camera device.</string>
    <string name="refresh">Try Again</string>
    <string name="later_alarm">Push Notification(s)</string>
    <string name="today">Today</string>
    <string name="select_date">Select Date</string>
    <string name="detail_del_device_btn_tip">Delete the device?</string>
    <string name="detail_del_device_success">Deleted.</string>
    <string name="message_no_data_text">No message.</string>
    <string name="xlistview_header_hint_normal">Tap Downwards to Refresh</string>
    <string name="xlistview_header_hint_ready">Release to Update</string>
    <string name="xlistview_header_hint_more">Tap downwards to load more...</string>
    <string name="xlistview_header_hint_loading">Loading…Please wait.</string>
    <string name="xlistview_header_last_time">Recent Update</string>
    <string name="xlistview_footer_hint_normal">Tap upwards to load more...</string>
    <string name="xlistview_footer_hint_no_more_device">No more device available.</string>
    <string name="xlistview_footer_hint_ready">Release to load more...</string>
    <string name="xlistview_footer_no_more">No More</string>
    <string name="xlistview_footer_no_more_msg">No more messages.</string>
    <string name="get_message_fail_service_exception">Operation failed.</string>
    <string name="message_encrypt_inputpsw_tip_title">Enter the password as the picture is encrypted. The default password is the device verification code on the device label. If no verification code on your device, input the default verification code : ABCDEF (upper-case).</string>
    <string name="message_refresh_fail_network_exception">Operation failed. Check your network.</string>
    <string name="message_refresh_fail_server_exception">Operation failed, server exception.</string>
    <string name="message_come_from_tip">From:</string>
    <string name="message_video">Message Video</string>
    <string name="message_live">Live Mode</string>
    <string name="alarm_type_remotecontrol">Remote Emergency Button Event</string>
    <string name="alarm_type_infrared">PIR Event</string>
    <string name="alarm_type_door">Magnetic Contact Alarm</string>
    <string name="alarm_type_smoke">Smoke Detection Alarm</string>
    <string name="alarm_type_gas">Combustible Gas Alarm</string>
    <string name="alarm_type_water">Water Intrusion Alarm</string>
    <string name="alarm_type_urgent_button">Emergency Alarm</string>
    <string name="alarm_type_person_alarm">PIR &amp; Motion Alarm</string>
    <string name="ez_alarm_type_person_alarm">PIR Event</string>
    <string name="alarm_type_motion_detection">Motion Detection Alarm</string>
    <string name="alarm_type_baby_cry">Baby Cry Alarm</string>
    <string name="alarm_type_unknown">Unknown Alarm</string>
    <string name="alarm_message_del_fail_txt">Deleting failed.</string>
    <string name="alarm_message_del_fail_network_exception">Deleting failed. Check your network.</string>
    <string name="local_network_exception">Network unavailable. Check your network.</string>
    <string name="push_event_get">Received</string>
    <string name="push_event_get_count"> Message(s) Pushed</string>
    <string name="push_event_from">From:</string>
    <string name="get_device_picture_fail">Getting device information failed.</string>
    <string name="input_device_picture_uuid">Enter Device Name uuid</string>
    <string name="input_device_picture_size">Enter the image width (pixel from 0 to 1280)</string>
    <string name="device_picture">Device Image uuid</string>
    <string name="input_device_video_uuid">Enter Device Video uuid</string>
    <string name="auto_wifi_title_add_device">Add Device</string>
    <string name="loading">Loading...</string>
    <string name="retry">Try Again</string>
    <string name="no_more_leave_tip">Up to 100 messages can be saved for 7 days.</string>
    <string name="add_device_fail">Adding the device failed.</string>
    <string name="activate">Activate</string>
    <string name="sadp_activate_state1">Device is in factory status, please setup password first</string>
    <string name="sadp_activate_state2">The password is for accessing the device via the web browser.</string>
    <string name="sadp_password_input_hint">8 to 16 Characters, a combination of digits, letters, symbols.</string>
    <string name="abc123ABCOTHER">1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ !#$%&amp;\&apos;()*+,-.;&lt;=&gt;?@[\]^_`{|}~</string>
    <string name="lan_device_pwd_tip">Password is device verification code or activation code</string>
    <string name="user_name_txt">Account</string>
    <string name="lan_device_login_default_name">admin</string>
    <string name="password_et_hint">Please input the password.</string>
    <string name="title_activate_device">Activate Device</string>
    <string name="app_key">"AppKey:"</string>
    <string name="access_token">"AccessToken:"</string>
    <string name="string_apiurl">"ApiUrl:"</string>
    <string name="string_authurl">"AuthUrl:"</string>
    <string name="server_area">ServerArea:</string>
    <string name="start_to_experience">start to experience !</string>
    <string name="explain_of_app_key">obtain from developer website or technical support</string>
    <string name="explain_of_access_token">obtain from developer website or technical support</string>
    <string name="explain_of_server_area">Note: choose area according to country of using your country</string>
    <string name="login_by_ezviz_account"><u>start experience by ezviz account</u></string>
    <string name="specified_device">specified device</string>
    <string name="tip_specified_device">(optional)input a specified device to only show it in device list!</string>
    <string name="config_wifi_succeed">config wifi succeed!</string>
    <string name="adding_device_to_your_account">adding device to your account...</string>
    <string name="give_up_adding">Give Up</string>
</resources>