<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/page_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:visibility="visible">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="jcTestClick"
            android:src="@drawable/login_logo" />

        <TextView
            android:id="@+id/tv_sdk_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="v1.0.0.20190815"
            android:textColor="@color/gray"
            android:textSize="@dimen/button_text_size" />

        <!--服务器区域 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_area"
                android:textSize="18dp" />

            <Spinner
                android:id="@+id/sp_server_area"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explain_of_server_area"
                android:textSize="10dp" />

        </LinearLayout>

        <!-- ApiUrl -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_apiurl"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/et_api_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10dp" />

        </LinearLayout>

        <!-- WebUrl -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_authurl"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/et_auth_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10dp" />

        </LinearLayout>

        <!-- AppKey -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_key"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/et_app_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/explain_of_app_key"
                android:textSize="10dp" />

        </LinearLayout>

        <!-- AccessToken -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/access_token"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/et_access_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/explain_of_access_token"
                android:textSize="10dp" />

        </LinearLayout>

        <!-- Specified device -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/specified_device"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/et_specified_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tip_specified_device"
                android:textSize="10dp" />

        </LinearLayout>

        <!-- token登录按钮-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="onClickStartExperience"
            android:text="@string/start_to_experience" />

        <!-- 账号登录按钮-->
        <TextView
            android:id="@+id/tv_ezviz_account_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="onClickLoginByEzvizAccount"
            android:text="@string/login_by_ezviz_account"
            android:textColor="@color/blue_text"
            android:textSize="16dp"
            android:textStyle="bold" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/vg_login_anim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <include layout="@layout/layout_login_anim" />

    </FrameLayout>

</RelativeLayout>
