<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wifi_config_bg"
    android:gravity="center">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/link_account2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_wifi_succeed"
            android:textColor="@color/gray_text"
            android:textSize="20dp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adding_device_to_your_account"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/green_text"/>

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <ProgressBar
                android:id="@+id/app_progress_bar_add_device"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>

            <LinearLayout
                android:id="@+id/app_vg_failed_to_add_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:visibility="invisible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_device_fail"
                    android:textColor="@color/red"
                    android:textSize="15dp"
                    android:layout_marginBottom="30dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/retry"
                        android:onClick="onClickRetryAddDevice"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/give_up_adding"
                        android:layout_marginLeft="20dp"
                        android:onClick="onClickGiveUpAddDevice"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>