<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dp" >

    <TextView
        android:id="@+id/footer_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/xlistview_footer_hint_normal" />

    <TextView
        android:id="@+id/footer_hint_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/footer_hint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/xlistview_footer_hint_no_more_device"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/footer_loading_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:visibility="invisible" >

        <ProgressBar
            android:id="@+id/footer_progress"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:indeterminateDrawable="@drawable/common_refresh_indeterminate" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/loading" />
    </LinearLayout>

</RelativeLayout>