<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.videogo.ui.LanDevice.LanDeviceActivateActivity">

    <RelativeLayout
                    android:id="@+id/title_layout"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/common_title"
    >

        <LinearLayout
            android:id="@+id/title_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
        >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/title_text_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
        >

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="@string/title_activate_device"
                android:maxWidth="180dp"
                android:singleLine="true"
                android:textSize="17sp"
            />

            <TextView
                android:id="@+id/sub_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:maxWidth="180dp"
                android:singleLine="true"
                android:textSize="11sp"
                android:visibility="gone"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/title_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
        >
        </LinearLayout>

    </RelativeLayout>

    <FrameLayout
        android:layout_below="@+id/title_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="18.67dp"
                android:lineSpacingExtra="8dp"
                android:text="@string/sadp_activate_state1"
                android:textColor="#333333"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/passwordETV"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:digits="@string/abc123ABCOTHER"
                android:hint="@string/sadp_password_input_hint"
                android:inputType="textVisiblePassword"
                android:maxLength="16"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#333333"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="@string/sadp_activate_state2"
                android:textColor="#adadad"
                android:textSize="14sp" />


            <Button
                android:layout_height="wrap_content"
                android:id="@+id/activateBtn"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="32dp"
                android:text="@string/activate" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </LinearLayout>

    </FrameLayout>

</RelativeLayout>
