<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minHeight="60dp" >

    <LinearLayout
        android:id="@+id/header_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/header_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:src="@drawable/arrow_down" />

            <ProgressBar
                android:id="@+id/header_progress"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:indeterminateDrawable="@drawable/common_refresh_indeterminate"
                android:visibility="gone" />

            <TextView
                android:id="@+id/header_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xlistview_header_hint_normal" />
        </LinearLayout>

        <TextView
            android:id="@+id/header_hint_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/no_more_leave_tip"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/header_time_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xlistview_header_last_time"
                android:textSize="@dimen/sub_button_text_size" />

            <TextView
                android:id="@+id/header_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sub_button_text_size" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>